--- a/2-css-basics/resources/css/style4-1.css
+++ b/2-css-basics/resources/css/style4-1.css
@@ -60,8 +60,8 @@ section {
   text-align: center; /* 가운데 정렬 */
   font-weight: bold; /* 굵은 글씨 */
   min-width: 80px; /* 최소 너비 */
-  /*****************************/
-  margin: 5px; /*아이템 간 여백 */
+  /*************inline-block과 테스트 위한 확인****************/
+  /* margin: 5px; 아이템 간 여백 */
 }
 /*
  **flexbox**는 기존의 **inline-block** 레이아웃을 완전히 대체할 수 있습니다.  
@@ -185,7 +185,7 @@ flexbox는 inline-block보다 더 강력하고 유연한 정렬, 간격, 정렬 
 .card {
   /* flex: 1; 남은 공간을 균등하게 분배 , 세 카드는 남은 공간을 1:1:1의 비율로 균등하게 나눠 가집니다 */
   /* flex: 1은 남은 공간을 균등하게 분배하므로, 혼자 있는 4번째 카드가 전체 너비를 차지하게 됩니다.  */
-  flex: 1;
+  flex:  1 ;
   min-width: 250px; /* 최소 너비 설정 */
   background-color: white; /* 흰색 배경 */
   border: 1px solid #ddd; /* 연한 회색 테두리 */
@@ -203,8 +203,7 @@ flexbox는 inline-block보다 더 강력하고 유연한 정렬, 간격, 정렬 
 }
 
 .card p {
-  /* 	flex-grow: 1;            남은 공간을 차지해서 버튼을 아래로 밀어냄 */
-  color: #666; /* 회색 글자 */
+   color: #666; /* 회색 글자 */
 }
 
 .card button {
